<resources>
    <string name="app_name">FootballClub by Fatimazza</string>
    
    <string name="teams">Teams</string>
    <string name="favorites">Favorites</string>
    <string name="team_detail">Team Detail</string>

    <string name="intent_id">id</string>

    <string name="favorite_added">Added to favorite</string>
    <string name="favorite_removed">Removed from favorite</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
</resources>
